--- a/track-backend/String-analyzer/package.json
+++ b/track-backend/String-analyzer/package.json
@@ -1,23 +1,18 @@
 {
   "name": "string-analyzer",
-  "version": "1.0.0",
-  
-  "directories": {
-    "test": "tests"
-  },
+  "version": "1.0.2",
+  "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "test": "jest"
   },
-  
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "jest": "^30.2.0",
-    "pg": "^8.16.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
+    "express": "^4.18.2",
+    "sequelize": "^6.35.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
