--- a/track-backend/String-analyzer/package.json
+++ b/track-backend/String-analyzer/package.json
@@ -1,18 +1,19 @@
 {
   "name": "string-analyzer",
-  "version": "1.0.2",
-  "main": "src/app.js",
+  "version": "1.0.0",
   "scripts": {
     "start": "node src/app.js",
     "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "sequelize": "^6.35.2",
     "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4"
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
