--- a/track-backend/sonic-critic-agent/package.json
+++ b/track-backend/sonic-critic-agent/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "An AI agent for Telex.im that synthesizes the top 5 album reviews using RAG and web scraping.",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
