--- a/track-backend/sonic-critic-agent/package.json
+++ b/track-backend/sonic-critic-agent/package.json
@@ -22,7 +22,9 @@
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "google-search-results-nodejs": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
